--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1952,6 +1952,16 @@ display:none !important;
         padding:0px !important;
         
     }
+    .text-wraper {
+    background: #41294a;
+    margin-top: -43px;
+    padding: 25px;
+    color: #fff;
+}
+    .banner-text {
+        font-size: 14px;
+        top: 50% !important;
+    }
     img.custom-logo {
         width: 50px;
         height: auto;
@@ -1982,7 +1992,8 @@ display:none !important;
         font-size: 4vw !important;
         line-height: 1vh;
         width: 100% !important;
-        padding: 10px 3px;
+        padding: 7px 3px;
+        margin: 0px !important;
     }
     .mobile-menu li {
         margin-bottom: 9px  !important;
@@ -1999,9 +2010,9 @@ display:none !important;
     
     }
     .main-banner {
-        background-size: contain;
-        background-position: center;
-        height: 275px !important;
+        background-size: cover;
+        background-position-y: 25px;
+        height: 315px !important;
         position: relative;
         left: 0;
         right: 0;
@@ -2011,6 +2022,7 @@ display:none !important;
         top: 0;
         bottom: 0;
         height: '100%';
+        background-position-x: center;
         z-index: 999;
         background-repeat: no-repeat;
     }
