--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -64,6 +64,13 @@ main {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
+ /* iOS Safari-specific fix */
+@supports (-webkit-touch-callout: none) {
+    html, body {
+      height: 100%;
+    }
+  }
+  
 h1 {
 	font-size: 2em;
 	margin: 0.67em 0;
