--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1285,7 +1285,143 @@ ul {
 }
 
 }
+@media only screen and (min-width: 768px) and (max-width: 992px) and (orientation: landscape) {
+    .head-btn:nth-child(1) {
+        background: #41294a;
+        color: #fff;
+        padding: 2px 6px;
+        border-radius: 10px;
+        font-size: 14px;
+        text-decoration: none;
+    }
+    .banner-text {
+       
+        top: 31% !important;
+       
+    }
+    .banner-container img {
+        filter: brightness(1);
+        transition: filter 0.5s ease-in-out;
+        object-fit: fill;
+        width: 100%;
+        height: 100% !important;
+        /* display: none; */
+    }
+    .logo-wrap:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        background: url(./Ellipse-6.webp);
+        width: 100%;
+        height: 330px;
+        left: 1px;
+        background-repeat: no-repeat;
+        z-index: -1;
+    }
+ul.d-flex.menu-item-wrap li a {
+    padding: 0px 10px 0px 10px;
+}
+.content-wrap .pagestitle h2 {
 
+    font-size: 18px !important;
+
+}
+	  .single-page-bg-1 .vc_col-sm-6 .vc_column-inner{
+padding-top:4px !important;
+}
+    
+h2{
+font-size:22px;
+    
+}
+    p{
+font-size:15px;
+}
+    .single-page-bg-1 img {
+    height: 100%!important;
+}
+    .single-page-bg-1  {
+    height: 213px !important;
+    /* display: flex !important; */
+    /* justify-content: center; */
+}
+    .single-page-bg-1 .single-col-img .vc_column-inner {
+    position: absolute;
+    top: -85px;
+}
+.banner-container {
+    position: relative;
+    width: 100%;
+    height: 100% !important;
+    overflow: hidden;
+}
+.py-5{
+    padding-top: 1.2rem !important;
+    padding-bottom: 1.2rem !important;
+}
+    .single-page-bg-1 .single-col-img .vc_column-inner {
+    position: absolute;
+    top: -168px;
+
+}
+.small-text-main ul li {
+    font-size: 20px;
+    color: #fff;
+    line-height: 42px;
+}
+	.owl-item.active.first .services-slider{
+
+    perspective: 1000px  !important;
+    transform-style: preserve-3d !important;
+    transform: rotateY(-40deg) !important;
+    scale: 0.8 !important;
+    position: relative;
+    left: 0px !important;
+    
+
+}
+	.services-slider .owl-next {
+    left: 6px;
+    position: relative;
+}
+	.services-slider .owl-prev {
+    right: 6px;
+    position: relative;
+}
+
+
+    .owl-item.active:not(.center) .services-slider {
+        perspective: 1000px !important;
+        transform-style: preserve-3d;
+        transform: rotateY(40deg);
+        scale: 0.8;
+        position: relative;
+        right: 0px;
+    }
+
+	p{font-size: 12px !important;}
+	.section-heads h2{
+    font-size: 22px;
+}
+	h3 {
+    font-size: 15px;
+}
+	a.mega-menu-link{
+    font-size: 11px;
+		    padding: 0 9px;
+}
+.head-btn:nth-child(2) {
+    background: #bd0100;
+    color: #fff;
+    padding: 4px 8px;
+    border-radius: 10px;
+    font-size: 12px;
+    text-decoration: none;
+}
+	.site-header .socail-icons-wrap{
+    gap: 8px !important;
+}
+}
 @media (min-width: 768px) and (max-width: 992px){
     .head-btn:nth-child(1) {
         background: #41294a;
@@ -1297,7 +1433,7 @@ ul {
     }
     .banner-text {
        
-        top: 31%;
+        top: 31% !important;
        
     }
     .banner-container img {
