--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -436,7 +436,7 @@ color:#000;
     font-weight: 400;
 }
 .site-header.logo-bg-remove a.mega-menu-link:hover {
-    color: #41d8bc !important;
+    color: #703487 !important;
 }
 .footer-link-wrap a:hover{
 	   color: #97b770;
