--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1163,6 +1163,16 @@ ul {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     transition: 0.2s;
 }
+.socail-hide {
+    font-size: 11px !important;
+    text-decoration: none;
+    cursor: pointer;
+ /* background-color: #422749 !important;  */
+    color: #000;
+    border-radius: 11px;
+    border: 2px solid #412949;
+    padding: 5px 19px;
+}
 .c-button--secondary {
     background-color: #97b770;
     color: #fff;
